# multifetcher

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  test.py
multifetcher/: main.py
