[tool.poetry]
name = "multifetcher"
version = "0.2.0"
description = "API for fetching URLs in parallel or one-by-one"
authors = ["Dmitriy Doroshev <dima@doroshev.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.5"}
uvloop = "^0.17.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
aiohttp-devtools = "^1.1"
requests = "^2.31.0"
black = "^23.7.0"
ruff = "^0.0.280"

[tool.ruff]
select = ["E", "F", "W", "C", "I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
